--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">  
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sunrise-Sunset-App</title> <!-- TODO: update title -->
   <!-- cdn for bulma.io -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.1/css/bulma.min.css"
@@ -20,9 +20,9 @@
     <div class="hero-body">
       <div class="container">
         <h1 class="title center">
-          My Sun Tracker 
-        </h1> 
-        <br>     
+          My Sun Tracker
+        </h1>
+        <br>
         <p class="subtitle center">
           A simple app to find info about your local:  &nbsp<strong class="has-text-warning"> Sunrise </strong>&nbsp and &nbsp<strong class="has-text-danger"> Sunset </strong>!
         </p>
@@ -33,8 +33,8 @@
     <div class="container">
       <div class="field">
         <div class="control center">
-          <input class="input is-warning is-rounded" type="text" style="max-width: 512px;" placeholder="Search for other cities here!">
-          <button class="button is-danger is-outlined is-rounded"><span class="icon is-small">
+          <input id="input_search" class="input is-warning is-rounded" type="text" style="max-width: 512px;" placeholder="Search for other cities here!">
+          <button id="button_search" class="button is-danger is-outlined is-rounded"><span class="icon is-small">
             <i class="fas fa-sun"></i>
           </span></button>
         </div>
@@ -47,7 +47,9 @@
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
-        integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" 
-        crossorigin="anonymous"></script>  
+        integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+        crossorigin="anonymous"></script>
+
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
