--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
       <div class="field">
         <div class="control center">
-          <input id="input_search" class="input is-warning is-rounded" type="text" style="max-width: 512px;" placeholder="Search for other cities here!">
+          <input id="input_search" class="input is-warning is-rounded" type="text" style="max-width: 512px;" placeholder="Search for 'City, ST' or ZIP Code">
           <button id="button_search" class="button is-danger is-outlined is-rounded"><span class="icon is-small">
             <i class="fas fa-sun"></i>
           </span></button>
