--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
       <div class="field">
         <div class="control center">
           <input id="input_search" class="input is-warning is-rounded" type="text" style="max-width: 512px;" placeholder="Search for 'City, ST' or ZIP Code">
-          <button id="button_search" class="button is-danger is-outlined is-rounded"><span class="icon is-small">
-            <i class="fas fa-sun"></i>
-          </span></button>
+          <button id="button_search" class="button is-danger is-outlined is-rounded ml-2">
+            <span class="icon is-small">
+              <i class="fas fa-sun"></i>
+            </span>
+          </button>
         </div>
     </div>
   </section>
