added helper css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   integrity="sha512-ZRv40llEogRmoWgZwnsqke3HNzJ0kiI0+pcMgiz2bxO6Ew1DVBtWjVn0qjrXdT3+u+pSN36gLgmJiiQ3cQtyzA=="
   crossorigin="anonymous"/>
   <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/helpers.css">
   <!-- ------activate below to debug layout------ -->
   <!-- <link rel="stylesheet" href="assets/css/debug.css"> -->
 </head>
@@ -24,7 +24,10 @@
         </h1> 
         <br>     
         <p class="subtitle center">
-          A simple app to find info about your local:  &nbsp<strong class="has-text-warning"> Sunrise </strong>&nbsp and &nbsp<strong class="has-text-danger"> Sunset </strong>!
+          A simple app to find info about your local:
+        </p>
+        <p class= "subtitle center">  
+          &nbsp<span class="has-text-warning hero-text"> Sunrise </span>&nbsp / &nbsp<span class="has-text-danger hero-text"> Sunset </span>!
         </p>
       </div>
     </div>
