--- a/index.html
+++ b/index.html
@@ -15,7 +15,83 @@
   <!-- <link rel="stylesheet" href="assets/css/debug.css"> -->
 </head>
 <body>
-  <!-- sample bulma html -->
+
+
+  <!-- Nav - bar -->
+  <nav class="navbar is-black" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="">
+        <i class="fa fa-sun fa-2x has-text-danger"></i>
+        <span class="ml-2">My-Sun-Tracker</span>
+      </a>
+  
+      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="searched-cities" id="burger-bar">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+  
+    <div id="searched-cities" class="navbar-menu">
+      <div class="navbar-start">        
+  
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link" id="city-dropdown">
+            Recent Searches
+          </a>
+  
+          <div class="navbar-dropdown">
+            <a class="navbar-item" id="navbar-itm-1">
+              Philadelphia
+            </a>
+            <a class="navbar-item" id="navbar-itm-2">
+              Boston
+            </a>
+            <a class="navbar-item" id="navbar-itm-3">
+              Los Angeles
+            </a>            
+            <a class="navbar-item" id="navbar-itm-4">
+              Anchorage
+            </a>
+            <a class="navbar-item" id="navbar-itm-5">
+              Addis Ababa
+            </a>
+            <a class="navbar-item" id="navbar-itm-6">
+              Rome
+            </a>
+            <a class="navbar-item" id="navbar-itm-7">
+              Tokyo
+            </a>
+          </div>
+        </div>
+      </div>
+  
+      <div class="navbar-end">
+
+        <a class="navbar-item" href="https://github.com/TechnicalParadox/cbc-group2-project1" target="_blank">
+          Github
+          <span class="ml-2"><i class="fab fa-github"></i></span>
+        </a>                
+      
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link" id="city-dropdown">
+            About Us  
+          </a>
+  
+          <div class="navbar-dropdown" id="about-us-dropdown">
+            <a class="navbar-item" id="navbar-itm-1" href="https://technicalparadox.github.io/" target="_blank">              
+              Giamo Lao
+            </a>
+            <a class="navbar-item" id="navbar-itm-2"  href="https://gintstir.github.io/Portfolio/"> 
+              Gint Stirbys
+            </a>
+          </div>
+        </div>
+      </div>      
+    </div>
+  </nav>
+  
+  <!-- hero section / main site section -->
   <section class="hero is-fullheight has-background-black">
     <div class="hero-body">
       <div class="container">
@@ -32,6 +108,8 @@
       </div>
     </div>
   </section>
+
+  <!-- search bar -->
   <section class="section has has-background-black">
     <div class="container">
       <div class="field">
@@ -45,6 +123,8 @@
         </div>
     </div>
   </section>
+
+  <!-- footer (if we want one) -->
 
 
   <!-- cdn for jquery and moment in case we need them -->
