--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         <i class="fa fa-sun fa-2x has-text-danger"></i>
         <span class="ml-2">My-Sun-Tracker</span>
       </a>
-  
+
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="searched-cities" id="burger-bar">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
       </a>
     </div>
-  
+
     <div id="searched-cities" class="navbar-menu">
-      <div class="navbar-start">        
-  
+      <div class="navbar-start">
+
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" id="city-dropdown">
             Recent Searches
           </a>
-  
+
           <div class="navbar-dropdown">
             <a class="navbar-item" id="navbar-itm-1">
               Philadelphia
@@ -49,7 +49,7 @@
             </a>
             <a class="navbar-item" id="navbar-itm-3">
               Los Angeles
-            </a>            
+            </a>
             <a class="navbar-item" id="navbar-itm-4">
               Anchorage
             </a>
@@ -65,34 +65,34 @@
           </div>
         </div>
       </div>
-  
+
       <div class="navbar-end">
 
         <a class="navbar-item" href="https://github.com/TechnicalParadox/cbc-group2-project1" target="_blank">
           Github
           <span class="ml-2"><i class="fab fa-github"></i></span>
-        </a>                
-      
+        </a>
+
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" id="city-dropdown">
-            About Us  
+            About Us
           </a>
-  
+
           <div class="navbar-dropdown" id="about-us-dropdown">
-            <a class="navbar-item" id="navbar-itm-1" href="https://technicalparadox.github.io/" target="_blank">              
+            <a class="navbar-item" id="navbar-itm-1" href="https://technicalparadox.github.io/" target="_blank">
               Giamo Lao
             </a>
-            <a class="navbar-item" id="navbar-itm-2"  href="https://gintstir.github.io/Portfolio/"> 
+            <a class="navbar-item" id="navbar-itm-2"  href="https://gintstir.github.io/Portfolio/">
               Gint Stirbys
             </a>
           </div>
         </div>
-      </div>      
+      </div>
     </div>
   </nav>
-  
+
   <!-- hero section / main site section -->
-  <section class="hero is-fullheight has-background-black">
+  <section class="hero is-fullheight-with-navbar has-background-black">
     <div class="hero-body">
       <div class="container">
         <h1 class="title center">
@@ -102,7 +102,7 @@
         <p class="subtitle center">
           A simple app to find info about your local:
         </p>
-        <p class= "subtitle center">  
+        <p class= "subtitle center">
           &nbsp<span class="has-text-warning hero-text"> Sunrise </span>&nbsp / &nbsp<span class="has-text-danger hero-text"> Sunset </span>!
         </p>
       </div>
