adjust padding of search section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
   <link rel="stylesheet" href="assets/css/helpers.css">
   <!-- ------activate below to debug layout------ -->
-  <!-- <link rel="stylesheet" href="assets/css/debug.css"> -->
+   <link rel="stylesheet" href="assets/css/debug.css">
 </head>
 <body>
 
@@ -110,7 +110,7 @@
   </section>
 
   <!-- search bar -->
-  <section class="section has has-background-black">
+  <section class="section has has-background-black search">
     <div class="container">
       <div class="field">
         <div class="control center">
