added animated scroll cue

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <link rel="stylesheet" href="assets/css/helpers.css">
   <!-- ------activate below to debug layout------ -->
    <link rel="stylesheet" href="assets/css/debug.css">
+
+  <!-- Scroll cue thanks to https://cssanimation.rocks/scroll-cue/ -->
+  <section class="header-down-arrow">
+    <img src="./assets/images/downarrow.png" width="50">
+  </section>
+
 </head>
 <body>
 
