disabled debug css
oops

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
   <link rel="stylesheet" href="assets/css/helpers.css">
   <!-- ------activate below to debug layout------ -->
-   <link rel="stylesheet" href="assets/css/debug.css">
+  <!-- <link rel="stylesheet" href="assets/css/debug.css"> -->
 
   <!-- Scroll cue thanks to https://cssanimation.rocks/scroll-cue/ -->
   <section class="header-down-arrow">
