--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="container">
       <div class="field">
         <div class="control center">
-          <input id="input_search" class="input is-warning is-rounded" type="text" style="max-width: 512px;" placeholder="Search for 'City, ST' or ZIP Code">
+          <input id="input_search" class="input is-warning is-rounded" type="text" style="max-width: 512px;" placeholder="Search for 'City, ST'">
           <button id="button_search" class="button is-danger is-outlined is-rounded ml-2">
             <span class="icon is-small">
               <i class="fas fa-sun"></i>
@@ -139,12 +139,12 @@
 
 
   <!-- cdn for jquery and moment in case we need them -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
-        integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
-        crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+    integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+    crossorigin="anonymous"></script>
 
   <script src="./assets/js/script.js"></script>
 </body>
