--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="container">
       <div class="field">
         <div class="control center">
-          <input id="input_search" class="input is-warning is-rounded" type="text" style="max-width: 512px;" placeholder="Search for 'City, ST'">
+          <input id="input_search" class="input is-warning is-rounded" type="text" style="max-width: 512px;" placeholder="Search for 'City, ST' or 'ZIP, Country'">
           <button id="button_search" class="button is-danger is-outlined is-rounded ml-2">
             <span class="icon is-small">
               <i class="fas fa-sun"></i>
