--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
   </footer>
 
 
-  <!-- cdn for jquery and moment in case we need them -->
+  <!-- cdn for jquery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
     crossorigin="anonymous"></script>
+  <!-- load Luxon JS for time helping needs -->
   <script src="./assets/js/luxon.min.js"></script>
 
   <script src="./assets/js/script.js"></script>
