format hours and minutes to be 2 digits and slight rebranding

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="navbar-brand">
       <a class="navbar-item" href="">
         <i class="fa fa-sun fa-2x has-text-danger"></i>
-        <span class="ml-2">My-Sun-Tracker</span>
+        <span class="ml-2">My-Time-Sun-Tracker</span>
       </a>
 
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="searched-cities" id="burger-bar">
@@ -102,11 +102,11 @@
     <div class="hero-body">
       <div class="container">
         <h1 class="title center">
-          My Sun Tracker
+          My Time Sun Tracker
         </h1>
         <br>
         <p class="subtitle center">
-          A simple app to find info about your local:
+          A simple app to find info about your local times for their solar times:
         </p>
         <p class= "subtitle center">
           &nbsp<span class="has-text-warning hero-text"> Sunrise </span>&nbsp / &nbsp<span class="has-text-danger hero-text"> Sunset </span>!
