Time placeholders displayed on site

--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
         <p class= "subtitle center">
           &nbsp<span class="has-text-warning hero-text"> Sunrise </span>&nbsp / &nbsp<span class="has-text-danger hero-text"> Sunset </span>!
         </p>
+        <div id="times"> <!-- TODO: flex display -->
+          <p>Sunrise: <span id="time_sunrise" class="has-text-warning"></span></p>
+          <p>Solar Noon: <span id="time_noon" class="has-text-info"></span></p>
+          <p>Sunset: <span id="time_sunset" class="has-text-danger"></span></p>
+        </div>
       </div>
     </div>
   </section>
