app hero accurately reflects use of application

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </h1>
         <br>
         <p class="subtitle center">
-          A simple app to find info about your local times for their solar times:
+          A simple app to find what their solar times are in your local time.
         </p>
         <p class= "subtitle center">
           &nbsp<span class="has-text-warning hero-text"> Sunrise </span>&nbsp / &nbsp<span class="has-text-danger hero-text"> Sunset </span>!
