small formatting change to html

--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
         <p class="subtitle center">
           A simple app to find what solar times are in your local time.
         </p>
-        <p class= "subtitle center">
-          &nbsp<span class="has-text-warning hero-text"> Sunrise </span>&nbsp / &nbsp<span class="has-text-danger hero-text"> Sunset </span>!
+        <p class= "subtitle center"> <!-- Displays "Sunrise / Sunset" -->
+          <span class="has-text-warning hero-text">Sunrise</span>
+          &nbsp / &nbsp
+          <span class="has-text-danger hero-text">Sunset</span>!
         </p>
         <div id="times"> <!-- TODO: flex display -->
           <p>Sunrise: <span id="time_sunrise" class="has-text-warning"></span></p>
