when burger appears on smaller screen sizes, now displays menu items when clicked

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
   <!-- Nav - bar -->
   <nav class="navbar is-black" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a class="navbar-item" href="">
-        <i class="fa fa-sun fa-2x has-text-danger"></i>
+      <a class="navbar-item">
+        <i class="fa fa-sun fa-2x has-text-white"></i>
         <span class="ml-2">My-Time-Sun-Tracker</span>
       </a>
 
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="searched-cities" id="burger-bar">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
+        <span></span>
+        <span></span>
+        <span></span>
       </a>
     </div>
 
@@ -80,15 +80,15 @@
         </a>
 
         <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link" id="city-dropdown">
+          <a class="navbar-link">
             About Us
           </a>
 
-          <div class="navbar-dropdown" id="about-us-dropdown">
-            <a class="navbar-item" id="navbar-itm-1" href="https://technicalparadox.github.io/" target="_blank">
+          <div class="navbar-dropdown has-background-black" id="about-us-dropdown">
+            <a class="navbar-item has-text-white" id="navbar-itm-1" href="https://technicalparadox.github.io/" target="_blank">
               Giamo Lao
             </a>
-            <a class="navbar-item" id="navbar-itm-2"  href="https://gintstir.github.io/Portfolio/">
+            <a class="navbar-item has-text-white" id="navbar-itm-2"  href="https://gintstir.github.io/Portfolio/">
               Gint Stirbys
             </a>
           </div>
@@ -129,7 +129,7 @@
         <div class="column is-4-tablet is-3-desktop">
           <div class="card has-background-black">
             <div class="card-image has-text-centered has-text-white px-6 ">
-              <img src="/assets/images/sunrise.png" alt="sunrise">
+              <img src="assets\images\sunrise.png" alt="sunrise">
             </div>
             <div class="card-content has-text-centered" id="times">
               <p class="has-text-warning">Sunrise</p>
@@ -140,7 +140,7 @@
         <div class="column is-4-tablet is-3-desktop">
           <div class="card has-background-black">
             <div class="card-image has-text-centered has-text-white px-6 ">
-              <img src="/assets/images/sun.png" alt="noon">
+              <img src="assets\images\sun.png" alt="noon">
             </div>
             <div class="card-content has-text-centered" id="times">
               <p class="has-text-info">Solar Noon</p>
@@ -151,7 +151,7 @@
         <div class="column is-4-tablet is-3-desktop">
           <div class="card has-background-black">
             <div class="card-image has-text-centered has-text-white px-6 ">
-              <img src="/assets/images/sunset.png" alt="noon">
+              <img src="assets\images\sunset.png" alt="sunset">
             </div>
             <div class="card-content has-text-centered" id="times">
               <p class="has-text-danger">Sunset</p>
