--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 </head>
 <body>
+  <!-- Modal that lauches on page load with time format and search type switches -->
+
 
 
   <!-- Nav - bar -->
@@ -176,9 +178,17 @@
             </span>
           </button>
         </div>
+        <div class="field center mt-5">
+          <!-- Rounded switch -->
+          <input type="checkbox" id="toggle" class="checkbox" />  
+          <label for="toggle" class="switch "></label>
+        </div> 
+        
+        </div>             
       </div>
     </div>
   </section>
+
 
   <!-- footer (if we want one) -->
   <!-- attribution to sunrise-sunset api, required by ToS that we provide link to site -->
