made remaining white pieces of burger menu have black bg

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       </a>
     </div>
 
-    <div id="searched-cities" class="navbar-menu">
-      <div class="navbar-start">
+    <div id="searched-cities" class="navbar-menu has-background-black">
+      <div class="navbar-start has-background-black">
 
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link" id="city-dropdown">
+        <div class="navbar-item has-dropdown has-background-black is-hoverable">
+          <a class="navbar-link  has-background-black" id="city-dropdown">
             Recent Searches
           </a>
 
@@ -81,8 +81,8 @@
           <span class="ml-2"><i class="fab fa-github"></i></span>
         </a>
 
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link">
+        <div class="navbar-item has-background-black has-dropdown is-hoverable">
+          <a class="navbar-link  has-background-black">
             About Us
           </a>
 
@@ -180,11 +180,11 @@
         </div>
         <div class="field center mt-5">
           <!-- Rounded switch -->
-          <input type="checkbox" id="toggle" class="checkbox" />  
+          <input type="checkbox" id="toggle" class="checkbox" />
           <label for="toggle" class="switch "></label>
-        </div> 
-        
-        </div>             
+        </div>
+
+        </div>
       </div>
     </div>
   </section>
