--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             Recent Searches
           </a>
 
-          <div class="navbar-dropdown has-background-black">
+          <div id="dropdown-recents" class="navbar-dropdown has-background-black">
             <a class="navbar-item has-text-white" id="navbar-itm-1">
               Philadelphia
             </a>
