removed uneccesary ids from dummy data, comment

--- a/index.html
+++ b/index.html
@@ -49,27 +49,29 @@
           </a>
 
           <div id="dropdown-recents" class="navbar-dropdown has-background-black">
-            <a class="navbar-item has-text-white" id="navbar-itm-1">
+            <!-- Dummy Data cleared on load -->
+            <a class="navbar-item has-text-white">
               Philadelphia
             </a>
-            <a class="navbar-item has-text-white" id="navbar-itm-2">
+            <a class="navbar-item has-text-white">
               Boston
             </a>
-            <a class="navbar-item has-text-white" id="navbar-itm-3">
+            <a class="navbar-item has-text-white">
               Los Angeles
             </a>
-            <a class="navbar-item has-text-white" id="navbar-itm-4">
+            <a class="navbar-item has-text-white">
               Anchorage
             </a>
-            <a class="navbar-item has-text-white" id="navbar-itm-5">
+            <a class="navbar-item has-text-white">
               Addis Ababa
             </a>
-            <a class="navbar-item has-text-white" id="navbar-itm-6">
+            <a class="navbar-item has-text-white">
               Rome
             </a>
-            <a class="navbar-item has-text-white" id="navbar-itm-7">
+            <a class="navbar-item has-text-white">
               Tokyo
             </a>
+            <!-- End Dummy Data -->
           </div>
         </div>
       </div>
