recent searches now are searched on click

--- a/index.html
+++ b/index.html
@@ -50,25 +50,25 @@
 
           <div id="dropdown-recents" class="navbar-dropdown has-background-black">
             <!-- Dummy Data cleared on load -->
-            <a class="navbar-item has-text-white">
+            <a id="recent-search" class="navbar-item has-text-white">
               Philadelphia
             </a>
-            <a class="navbar-item has-text-white">
+            <a id="recent-search" class="navbar-item has-text-white">
               Boston
             </a>
-            <a class="navbar-item has-text-white">
+            <a id="recent-search" class="navbar-item has-text-white">
               Los Angeles
             </a>
-            <a class="navbar-item has-text-white">
+            <a id="recent-search" class="navbar-item has-text-white">
               Anchorage
             </a>
-            <a class="navbar-item has-text-white">
+            <a id="recent-search" class="navbar-item has-text-white">
               Addis Ababa
             </a>
-            <a class="navbar-item has-text-white">
+            <a id="recent-search" class="navbar-item has-text-white">
               Rome
             </a>
-            <a class="navbar-item has-text-white">
+            <a id="recent-search" class="navbar-item has-text-white">
               Tokyo
             </a>
             <!-- End Dummy Data -->
