--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
       </a>
     </div>
 
-    <div id="searched-cities" class="navbar-menu has-background-black">
-      <div class="navbar-start has-background-black">
+
+    <div class="navbar-start has-background-black">
+      <div id="searched-cities" class="navbar-menu has-background-black">
 
         <div class="navbar-item has-dropdown has-background-black is-hoverable">
           <a class="navbar-link  has-background-black" id="city-dropdown">
@@ -75,26 +76,27 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="navbar-end">
+    <div class="navbar-end">
 
-        <a class="navbar-item" href="https://github.com/TechnicalParadox/cbc-group2-project1" target="_blank">
-          Github
-          <span class="ml-2"><i class="fab fa-github"></i></span>
+      <a class="navbar-item" href="https://github.com/TechnicalParadox/cbc-group2-project1" target="_blank">
+        Github
+        <span class="ml-2"><i class="fab fa-github"></i></span>
+      </a>
+
+      <div class="navbar-item has-background-black has-dropdown is-hoverable">
+        <a class="navbar-link  has-background-black">
+          About Us
         </a>
 
-        <div class="navbar-item has-background-black has-dropdown is-hoverable">
-          <a class="navbar-link  has-background-black">
-            About Us
+        <div class="navbar-dropdown has-background-black" id="about-us-dropdown">
+          <a class="navbar-item has-text-white" id="navbar-itm-1" href="https://technicalparadox.github.io/" target="_blank">
+            Giamo Lao
           </a>
-
-          <div class="navbar-dropdown has-background-black" id="about-us-dropdown">
-            <a class="navbar-item has-text-white" id="navbar-itm-1" href="https://technicalparadox.github.io/" target="_blank">
-              Giamo Lao
-            </a>
-            <a class="navbar-item has-text-white" id="navbar-itm-2"  href="https://gintstir.github.io/Portfolio/">
-              Gint Stirbys
-            </a>
+          <a class="navbar-item has-text-white" id="navbar-itm-2"  href="https://gintstir.github.io/Portfolio/">
+            Gint Stirbys
+          </a>
           </div>
         </div>
       </div>
