added cdn for bulma extensions

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.1/css/bulma.min.css"
   integrity="sha512-ZRv40llEogRmoWgZwnsqke3HNzJ0kiI0+pcMgiz2bxO6Ew1DVBtWjVn0qjrXdT3+u+pSN36gLgmJiiQ3cQtyzA=="
   crossorigin="anonymous"/>
-  <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+  
+  <!-- cdn for Bulma extension css -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-extensions@4.0.0/dist/css/bulma-extensions.min.css">
+  <!-- link for stylesheet -->
   <link rel="stylesheet" href="assets/css/helpers.css">
-  <!-- ------activate below to debug layout------ -->
+
+  <!-- ------activate link below to debug layout------ -->
   <!-- <link rel="stylesheet" href="assets/css/debug.css"> -->
 
   <!-- Scroll cue thanks to https://cssanimation.rocks/scroll-cue/ -->
@@ -199,8 +203,10 @@
     <div>Icons made by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
   </footer>
-
-
+  <!-- cdn for bulma extensions js -->
+  <script src="https://cdn.jsdelivr.net/npm/bulma-extensions@4.0.0/dist/js/bulma-extensions.min.js"></script>
+  <!-- cdn for font awesome -->
+  <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
   <!-- cdn for jquery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
