--- a/index.html
+++ b/index.html
@@ -190,15 +190,13 @@
     <div class="container my-6 has-text-centered">
       <div class="columns">
         <div class="column">
-<<<<<<< HEAD
-          <div class="field">            
-=======
-          <div id="switch-civ-time" class="field">
-            <!-- <label for="switchRoundedOutlinedWarning">On: 12h format Off: 24h format</label> -->
->>>>>>> 452cbc7bc7230aa78432422ab23cb14ca77bc05c
-            <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning" checked="checked">
-            <label for="switchRoundedOutlinedWarning"></label>
-            <p class="has-text-white">On: 12h format. Off: 24h format.</p>
+          <div class="field">
+            <div id="switch-civ-time" class="field">
+              <!-- <label for="switchRoundedOutlinedWarning">On: 12h format Off: 24h format</label> -->
+              <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning" checked="checked">
+              <label for="switchRoundedOutlinedWarning"></label>
+              <p class="has-text-white">On: 12h format. Off: 24h format.</p>
+            </div>
           </div>
         </div>
         <div id="switch-search-timezone" class="column">
@@ -216,7 +214,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
