--- a/index.html
+++ b/index.html
@@ -189,26 +189,22 @@
     </div>
     <div class="container my-6 has-text-centered">
       <div class="columns">
-        <div class="column">
-          <div class="field">
-            <div id="switch-civ-time" class="field">
-              <!-- <label for="switchRoundedOutlinedWarning">On: 12h format Off: 24h format</label> -->
-              <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning" checked="checked">
-              <label for="switchRoundedOutlinedWarning"></label>
-              <p class="has-text-white">On: 12h format. Off: 24h format.</p>
-            </div>
-          </div>
+        <div id="switch-civ-time" class="field column">
+          <!-- <label for="switchRoundedOutlinedWarning">On: 12h format Off: 24h format</label> -->
+          <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning">
+          <label for="switchRoundedOutlinedWarning"></label>
+          <p class="has-text-white">On: 12h format. Off: 24h format.</p>
         </div>
-        <div id="switch-search-timezone" class="column">
+        <div id="switch-search-timezone" class="field column">
           <div class="field">
-            <input id="switchRoundedOutlinedInfo" type="checkbox" name="switchRoundedOutlinedInfo" class="switch is-rounded is-outlined is-info" checked="checked">
+            <input id="switchRoundedOutlinedInfo" type="checkbox" name="switchRoundedOutlinedInfo" class="switch is-rounded is-outlined is-info">
             <label for="switchRoundedOutlinedInfo"></label>
             <p class="has-text-white">On: Local time. Off: Regional Time</p>
           </div>
         </div>
-        <div id="switch-html5-location" class="column">
+        <div id="switch-html5-location" class="field column">
           <div class="field">
-            <input id="switchRoundedOutlinedDanger" type="checkbox" name="switchRoundedOutlinedDanger" class="switch is-rounded is-outlined is-danger" checked="checked">
+            <input id="switchRoundedOutlinedDanger" type="checkbox" name="switchRoundedOutlinedDanger" class="switch is-rounded is-outlined is-danger">
             <label for="switchRoundedOutlinedDanger"></label>
             <p class="has-text-white">On: html5 location. Off: last saved city</p>
           </div>
