--- a/index.html
+++ b/index.html
@@ -189,20 +189,20 @@
     </div>
     <div class="container my-6 has-text-centered">
       <div class="columns">
-        <div id="switch-civ-time" class="field column">
+        <div id="switch-civ-time" class="column">
           <!-- <label for="switchRoundedOutlinedWarning">On: 12h format Off: 24h format</label> -->
           <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning">
           <label for="switchRoundedOutlinedWarning"></label>
           <p class="has-text-white">On: 12h format. Off: 24h format.</p>
         </div>
-        <div id="switch-search-timezone" class="field column">
+        <div id="switch-search-timezone" class="column">
           <div class="field">
             <input id="switchRoundedOutlinedInfo" type="checkbox" name="switchRoundedOutlinedInfo" class="switch is-rounded is-outlined is-info">
             <label for="switchRoundedOutlinedInfo"></label>
             <p class="has-text-white">On: Local time. Off: Regional Time</p>
           </div>
         </div>
-        <div id="switch-html5-location" class="field column">
+        <div id="switch-html5-location" class="column">
           <div class="field">
             <input id="switchRoundedOutlinedDanger" type="checkbox" name="switchRoundedOutlinedDanger" class="switch is-rounded is-outlined is-danger">
             <label for="switchRoundedOutlinedDanger"></label>
