--- a/index.html
+++ b/index.html
@@ -190,10 +190,12 @@
     <div class="container my-6 has-text-centered">
       <div class="columns">
         <div id="switch-civ-time" class="column">
-          <!-- <label for="switchRoundedOutlinedWarning">On: 12h format Off: 24h format</label> -->
-          <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning">
-          <label for="switchRoundedOutlinedWarning"></label>
-          <p class="has-text-white">On: 12h format. Off: 24h format.</p>
+          <div class="field">
+            <!-- <label for="switchRoundedOutlinedWarning">On: 12h format Off: 24h format</label> -->
+            <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning">
+            <label for="switchRoundedOutlinedWarning"></label>
+            <p class="has-text-white">On: 12h format. Off: 24h format.</p>
+          </div>
         </div>
         <div id="switch-search-timezone" class="column">
           <div class="field">
