added ids to html and id selectors to css

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="card-image has-text-centered has-text-white px-6 ">
               <img src="assets\images\sunrise.png" alt="sunrise">
             </div>
-            <div class="card-content has-text-centered" id="times">
+            <div class="card-content has-text-centered" id="times-sunrise">
               <p class="has-text-warning">Sunrise</p>
               <p><span id="time_sunrise" class="has-text-warning"></span></p>
             </div>
@@ -151,7 +151,7 @@
             <div class="card-image has-text-centered has-text-white px-6 ">
               <img src="assets\images\sun.png" alt="noon">
             </div>
-            <div class="card-content has-text-centered" id="times">
+            <div class="card-content has-text-centered" id="times-noon">
               <p class="has-text-info">Solar Noon</p>
               <p><span id="time_noon" class="has-text-info"></span></p>
             </div>
@@ -162,7 +162,7 @@
             <div class="card-image has-text-centered has-text-white px-6 ">
               <img src="assets\images\sunset.png" alt="sunset">
             </div>
-            <div class="card-content has-text-centered" id="times">
+            <div class="card-content has-text-centered" id="times-sunset">
               <p class="has-text-danger">Sunset</p>
               <p> <span id="time_sunset" class="has-text-danger"></span></p>
             </div>
