--- a/index.html
+++ b/index.html
@@ -193,22 +193,25 @@
           <div class="field">
             <!-- <label for="switchRoundedOutlinedWarning">On: 12h format Off: 24h format</label> -->
             <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning">
-            <label for="switchRoundedOutlinedWarning"></label>
-            <p class="has-text-white">On: 12h format. Off: 24h format.</p>
+            <label for="switchRoundedOutlinedWarning">
+              <br>Using Military Time
+            </label>
           </div>
         </div>
         <div id="switch-search-timezone" class="column">
           <div class="field">
             <input id="switchRoundedOutlinedInfo" type="checkbox" name="switchRoundedOutlinedInfo" class="switch is-rounded is-outlined is-info">
-            <label for="switchRoundedOutlinedInfo"></label>
-            <p class="has-text-white">On: Local time. Off: Regional Time</p>
+            <label for="switchRoundedOutlinedInfo">
+              <br>Using Local Timezone
+            </label>
           </div>
         </div>
         <div id="switch-html5-location" class="column">
           <div class="field">
             <input id="switchRoundedOutlinedDanger" type="checkbox" name="switchRoundedOutlinedDanger" class="switch is-rounded is-outlined is-danger">
-            <label for="switchRoundedOutlinedDanger"></label>
-            <p class="has-text-white">On: html5 location. Off: last saved city</p>
+            <label for="switchRoundedOutlinedDanger">
+              <br>Autolocation Off
+            </label>
           </div>
         </div>
       </div>
