--- a/index.html
+++ b/index.html
@@ -223,9 +223,10 @@
   <!-- attribution to sunrise-sunset api, required by ToS that we provide link to site -->
   <footer class="has-background-black p-3">
     Powered by <a href="https://sunrise-sunset.org/api" target="_blank">Sunrise Sunset</a>
-    <div>Icons made by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-
+    <br>
+    Icons by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar</a> on <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>
   </footer>
+
   <!-- cdn for bulma extensions js -->
   <script src="https://cdn.jsdelivr.net/npm/bulma-extensions@4.0.0/dist/js/bulma-extensions.min.js"></script>
 
