positioned footer links

--- a/index.html
+++ b/index.html
@@ -222,9 +222,14 @@
   <!-- footer (if we want one) -->
   <!-- attribution to sunrise-sunset api, required by ToS that we provide link to site -->
   <footer class="has-background-black p-3">
-    Powered by <a href="https://sunrise-sunset.org/api" target="_blank">Sunrise Sunset</a>
-    <br>
-    Icons by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar</a> on <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>
+    <div class="is-flex is-justify-content-space-between">
+      <div>
+        Powered by <a href="https://sunrise-sunset.org/api" target="_blank">Sunrise Sunset</a>
+      </div>
+      <div>
+        Icons by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar</a> on <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>
+      </div>
+    </div>
   </footer>
 
   <!-- cdn for bulma extensions js -->
