--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
       </div>
     </div>
-    <div class="container my-6 has-text-centered">
+    <div class="container mt-6 has-text-centered">
       <div class="columns">
         <div id="switch-civ-time" class="column">
           <div class="field">
