--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <!-- <label for="switchRoundedOutlinedWarning">On: 12h format Off: 24h format</label> -->
             <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning">
             <label for="switchRoundedOutlinedWarning">
-              <br>Using Military Time
+              <br>Using <span id="span-type-time">Military Time</span>
             </label>
           </div>
         </div>
@@ -202,7 +202,7 @@
           <div class="field">
             <input id="switchRoundedOutlinedInfo" type="checkbox" name="switchRoundedOutlinedInfo" class="switch is-rounded is-outlined is-info">
             <label for="switchRoundedOutlinedInfo">
-              <br>Using Local Timezone
+              <br>Using <span id="span-timezone">Local</span> Timezone
             </label>
           </div>
         </div>
@@ -210,7 +210,7 @@
           <div class="field">
             <input id="switchRoundedOutlinedDanger" type="checkbox" name="switchRoundedOutlinedDanger" class="switch is-rounded is-outlined is-danger">
             <label for="switchRoundedOutlinedDanger">
-              <br>Autolocation Off
+              <br>Autolocation <span id="span-location">Off</span>
             </label>
           </div>
         </div>
