--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
   </section>
 
-  <!-- search bar -->
+  <!-- search bar and switches -->
   <section class="section has-background-black search">
     <div class="container">
       <div class="field">
@@ -187,6 +187,7 @@
         </div>
       </div>
     </div>
+
     <div class="container mt-6 has-text-centered">
       <div class="columns">
         <div id="switch-civ-time" class="column">
