Switch states load from storage, military time conversion to civ

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <!-- <label for="switchRoundedOutlinedWarning">On: 12h format Off: 24h format</label> -->
             <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning">
             <label for="switchRoundedOutlinedWarning">
-              <br>Using <span id="span-type-time">Military Time</span>
+              <br>Using <span id="span-type-time">Military</span> Time
             </label>
           </div>
         </div>
